# tanh-sinh

./: CODE_OF_CONDUCT.md  CONTRIBUTING.md  Makefile  README.md  justfile  setup.cfg  tox.ini
.github/workflows/: ci.yml
logo/: logo.py
src/tanh_sinh/: __about__.py  __init__.py  main.py
tanh_sinh/: __init__.py  main.py
test/: test_tanh_sinh.py
tests/: test_tanh_sinh.py
