[metadata]
name = tanh_sinh
version = 0.2.0
author = Nico Schlömer
author_email = nico.schloemer@gmail.com
description = tanh-sinh quadrature for Python
url = https://github.com/nschloe/tanh_sinh
project_urls =
    Code=https://github.com/nschloe/tanh_sinh
    Issues=https://github.com/nschloe/tanh_sinh/issues
long_description = file: README.md
long_description_content_type = text/markdown
license = GPL-3.0-or-later
# See <https://pypi.org/classifiers/> for all classifiers.
classifiers =
    Development Status :: 4 - Beta
    Intended Audience :: Science/Research
    License :: OSI Approved :: GNU General Public License v3 or later (GPLv3+)
    Operating System :: OS Independent
    Programming Language :: Python
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3.7
    Programming Language :: Python :: 3.8
    Programming Language :: Python :: 3.9
    Programming Language :: Python :: 3.10
    Topic :: Utilities

[options]
package_dir =
    =src
packages = find:
install_requires =
    mpmath
    numpy
    scipy
python_requires = >=3.7

[options.packages.find]
where=src
